--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "tauri-plugin-liquid-glass-api": "^0.1.6"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
